--- a/index.html
+++ b/index.html
@@ -18,11 +18,57 @@
 </head>
 <body>
 
+<!-- Live Chats -->
+<div class="fabs">
+    <div class="chat">
+        <div class="chat_header">
+            <span id="chat_head">Live Chat</span>
+            <div class="chat_loader"></div>
+            <div class="chat_option"><i class="zmdi zmdi-more-vert"></i>
+                <ul>
+                    <li><span class="chat_color" style="border:solid 5px #2196F3" color="blue"></span></li>
+                    <li><span class="chat_color" style="border:solid 5px #00bcd4" color="cyan"></span></li>
+                    <li><span class="chat_color" style="border:solid 5px #607d8b" color="blue-grey"></span></li>
+                    <li><span class="chat_color" style="border:solid 5px #4caf50" color="green"></span></li>
+                    <li><span class="chat_color" style="border:solid 5px #A06056" color="light-green"></span></li>
+                    <li><span class="chat_color" style="border:solid 5px #cddc39" color="lime"></span></li>
+                    <li><span class="chat_color" style="border:solid 5px #ffc107" color="amber"></span></li>
+                    <li><span class="chat_color" style="border:solid 5px #ff5722" color="deep-orange"></span></li>
+                    <li><span class="chat_color" style="border:solid 5px #f44336" color="red"></span></li>
+                </ul>
+            </div>
 
+        </div>
+        <div class="chat_login">
+            <a id="chat_send_email" class="fab"><i class="zmdi zmdi-email"></i></a>
+            <input id="chat_log_email" placeholder="Email"></input>
+            <div class="chat_login_alert"></div>
+        </div>
+        <div id="chat_converse" class="chat_converse">
+      <span class="chat_msg_item chat_msg_item_admin">
+            <div class="chat_avatar">
+              <i class="zmdi zmdi-headset-mic"></i>
+            </div>Hi! How may I be of service</span>
+            <span class="chat_msg_item chat_msg_item_user">
+            <div class="chat_avatar">
+              <i class="zmdi zmdi-account"></i>
+            </div>Ermm..</span>
+        </div>
+        <div class="fab_field">
+            <a id="fab_listen" class="fab"><i class="zmdi zmdi-mic-outline"></i></a>
+            <a id="fab_send" class="fab"><i class="zmdi zmdi-mail-send"></i></a>
+            <textarea id="chatSend" name="chat_message" placeholder="Write a message" class="chat_field chat_message"></textarea>
+        </div>
+    </div>
+    <a target="_blank" id="fab_help" class="fab"><i class="zmdi zmdi-help-outline"></i></a>
+<!--    <a id="prime" class="fab"><i class="prime zmdi zmdi-plus"></i></a>-->
 
+    <a id="prime" class="fab"><img src="assets/icons/main/message.png" alt="icon_message"></a>
 
+</div>
 
-
+<!---------  Back To Top--------->
+<button onclick="topFunction()" id="myBtn" title="Go to top">↑</button>
 
 <!--------- Menu section start--------->
 <div class="container-fluid menu-container">
@@ -95,7 +141,7 @@
                     </ul>
                 </div>
             </nav>
-            <!---->
+            --->
 
             <div class="container_left col-xs-12 col-sm-12 col-md-12 col-lg-6">
                 <h5>HOME DESIGN</h5>
